# TT-Distill

./: .gitignore  AGENT.md  README.md  copy_deps.py  demos_summary.md  mypy_errors.txt  pyproject.toml  qwen2.5-1.5b-instruct-q8_0.gguf  reflex_engine.py  requirements.txt
demos/: __init__.py  benchmark_intelligence_hnsw.py  debug_arc2eval.py  demo_arc_agi.py  demo_arc_topology_solver.py  demo_auto_distill.py  demo_maca_dora.py  demo_maca_visualizer.py  demo_mcp_agentic_swap.py  demo_metal_swap.py  demo_moa_resolver.py  demo_phase4_scaling.py  demo_post_silicon.py  demo_reality_filter.py  demo_robotic_dog.py  demo_robotic_mujoco.py  demo_stress_test.py  diff_heur_math.py  main.py  test_arc_expertise_impact.py
llama.cpp/ggml/src/ggml-metal/: ggml-metal-context.h  ggml-metal-context.m  ggml-metal.metal
plans/: arc_solver_analysis.md  arc_solver_optimization_analysis.md  deterministic-extrapolation-protocol.md  dora-blending-engine-architecture.md  llama_cpp_metal_dora_swap.md  tt-distill-architecture-analysis.md  tt-distill-remediation-plan.md  universal_zero_copy_swap.md  vram_double_buffering_spec.md
src/: db_manager.py  docker_manager.py  llama_raw_embed.py  logger.py  model_tools.py  vector_memory.py
src/infrastructure/: __init__.py  docker_sandbox.py  git_manager.py  llm_client.py  strategy.py
src/orchestration/: __init__.py  arc_hybrid_solver.py  arc_latent_solver.py  arc_math_solver.py  arc_solvers.py  arc_topology.py  auto_distiller.py  brainstorming_salon.py  config.py  dora_blender.py  latent_trajectory.py  maca.py  maca_salon_bridge.py  mcp_intelligence_manifold.py  metal_swap.py  moa_gating.py  post_silicon.py  router.py  strategy.py  tt_distill_integration.py
src/persistence/: __init__.py  cocoindex_ingestion.py  embedding_service.py  hybrid_persistence.py  postgres_persistence.py  sqlite_persistence.py  strategy.py  sync_pipeline.py  trajectory_store.py
src/tt_distill.egg-info/: PKG-INFO
tests/: test_auto_distillation_loop.py  test_auto_distiller.py  test_basic.py  test_cocoindex_ingestion.py  test_db_manager.py  test_dora_blender.py  test_embedding_service.py  test_hot_swap_integrity.py  test_hybrid_persistence.py  test_integration.py  test_latent_trajectory.py  test_maca.py  test_math_solver.py  test_metal_bridge.py  test_moa_gating.py  test_postgres_persistence.py  test_reflex_engine.py  test_router.py  test_smart_router.py  test_sqlite_persistence.py  test_sync_pipeline.py  test_vector_memory.py
