[project]
name = "tt-distill"
version = "0.1.0"
description = "Test-Time Distillation Architecture via Latent Communication for Autonomous Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "dora-rs>=0.4.1",
    "glfw>=2.10.0",
    "llama-cpp-python>=0.3.16",
    "mujoco>=3.5.0",
    "numpy>=1.26.0",
    "psutil>=7.2.2",
    "pydantic>=2.4.0",
    "rich>=14.3.3",
    "scipy>=1.17.1",
    "sqlite-vec>=0.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "anyio>=4.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "PLC",    # pylint conventions
    "PLE",    # pylint errors
    "PLW",    # pylint warnings
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
warn_unreachable = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["llama.cpp", "data", "demos"]
